# depAnalysis

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  da_main.c
.deps/: depAnalysis_amd64_linux-da_main.Po  depAnalysis_amd64_linux-da_main.Tpo
docs/: Makefile  Makefile.in
tests/: Makefile  Makefile.in
